<resources>
    <string name="app_name">EasyNote</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="edit">修改</string>
    <string name="delete">删除</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="regiser">Register</string>

    <!-- Strings related to login -->
    <string name="username">Username</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="back">已有账号，返回登录</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="reg_error_confirmError">Enter password twice in different</string>
    <string name="changepassword_error">The original password input error</string>
    <string name="title_activity_write">Write a Note</string>

    <!--String related to note-->
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="category">category </string>
    <string name="submit">发布</string>
    <string name="error_invalid_title">This title is too short </string>
    <string name="createtime">createtime</string>
</resources>
