<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_write"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="cn.ftl213.easynote.WriteActivity"
    tools:showIn="@layout/activity_write">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:id="@+id/textInputLayout">

        <EditText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:imeOptions="actionUnspecified"
            android:inputType="textMultiLine"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:minLines="12"
            android:maxLines="16"
            android:ems="10"
            android:gravity="top"
            android:hint="@string/content"
            android:id="@+id/content"
            android:scrollbars="vertical"
            android:layout_below="@+id/textInputLayout"
            android:layout_alignParentStart="true"
            android:layout_marginTop="64dp"
            android:layout_alignParentEnd="true" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:text="@string/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/submit_btn"
        android:layout_marginBottom="62dp"
        android:layout_marginTop="20dp"
        android:onClick="submit"
        android:background="#ff336699"
        android:layout_gravity="center_horizontal"
        android:textColor="@android:color/white"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    </LinearLayout>
</LinearLayout>
